--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -10,10 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^1.16.5",
+    "expo": "^42.0.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
-    "react-native-picker": "^4.3.7"
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-picker": "^0.0.16",
+    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
