--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^1.16.5",
+    "@react-navigation/drawer": "^6.1.0",
     "expo": "^42.0.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
@@ -19,7 +20,9 @@
     "react-native-modal-picker": "^0.0.16",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^8.0.4",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
