--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -10,16 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/drawer": "^6.1.0",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.2",
     "expo": "^42.0.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-picker": "^0.0.16",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.5.0",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
