--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-picker": "^0.0.16",
