--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -25,6 +25,7 @@
     "react-native-modal-picker": "^0.0.16",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^8.0.4",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
