--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -19,9 +19,11 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
+    "react-native-dialogflow": "^3.2.2",
     "react-native-elements": "^3.4.2",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-listitem": "^1.0.5",
     "react-native-modal-picker": "^0.0.16",
