--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
     "expo": "^42.0.3",
+    "firebase": "^8.10.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
