--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.7.2",
+    "@react-native-firebase/firestore": "^12.7.2",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
