--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -28,6 +28,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-listitem": "^1.0.5",
     "react-native-modal-picker": "^0.0.16",
