--- a/AICSFINAL/myapp/android/app/src/main/AndroidManifest.xml
+++ b/AICSFINAL/myapp/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
   package="com.myapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="replace" />
 
     <application
       android:name=".MainApplication"
+      android:requestLegacyExternalStorage="true"
       android:label="@string/app_name"
       android:icon="@mipmap/aicscircle"
       android:roundIcon="@mipmap/aicscircle"
