View Announcement Admin UI

--- a/AICSFINAL/myapp/android/app/build.gradle
+++ b/AICSFINAL/myapp/android/app/build.gradle
@@ -125,6 +125,9 @@ android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
+    // compileSdkVersion 27
+    // buildToolsVersion "21.0.3"
+    
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -133,8 +136,10 @@ android {
 
     defaultConfig {
         applicationId "com.myapp"
+        // vectorDrawables.useSupportLibrary = true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        // targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
