--- a/AICSFINAL/myapp/android/build.gradle
+++ b/AICSFINAL/myapp/android/build.gradle
@@ -22,7 +22,12 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
+        // mavenLocal()
+        //     // ADD THIS
+        // maven { url 'https://maven.google.com' }
+
+        // // ADD THIS
+        // maven { url "https://www.jitpack.io" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
