--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^12.7.2",
-    "@react-native-firebase/firestore": "^12.7.2",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/firestore": "^12.8.0",
+    "@react-native-firebase/storage": "^12.8.0",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
@@ -25,9 +26,12 @@
     "react-native-cards": "^1.1.4",
     "react-native-dialogflow": "^3.2.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.5.5",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.36.2",
+    "react-native-image-modal": "^2.0.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-listitem": "^1.0.5",
     "react-native-modal-picker": "^0.0.16",
