--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -35,7 +35,6 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-listitem": "^1.0.5",
     "react-native-modal-picker": "^0.0.16",
-    "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
@@ -43,6 +42,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
