--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
+    "bad-words": "^3.0.4",
     "expo": "^42.0.3",
     "firebase": "^8.10.0",
     "react": "17.0.1",
