--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
     "bad-words": "^3.0.4",
+    "check-if-word": "^1.2.1",
     "expo": "^42.0.3",
     "firebase": "^8.10.0",
     "react": "17.0.1",
