--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
+    "axios": "^0.21.4",
     "bad-words": "^3.0.4",
     "check-if-word": "^1.2.1",
     "expo": "^42.0.3",
@@ -48,6 +49,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "url-exist": "^3.0.0",
     "word-exists": "^1.0.0"
   },
   "devDependencies": {
