--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -27,6 +27,8 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
+    "react-native-dialog": "^9.1.0",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-dialogflow": "^3.2.2",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.5",
