User vs Admin App Interface
1. Delete node_modules
2. Open GitHub Desktop > Pull
3. Open VSCode + Mobile Phone
4. npm i
5. react-native run-android

If magka problem:

// npm i @react-native-firebase/auth
// npm i react-native-dialog-input

npm i @react-native-firebase/auth@latest @react-native-firebase/storage@latest @react-native-firebase/firestore@latest

npm install @react-native-firebase/app@latest
@react-native-firebase/storage@latest
@react-native-firebase/firestore@latest
npm i @react-native-firebase/auth@latest

--- a/AICSFINAL/myapp/package.json
+++ b/AICSFINAL/myapp/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^12.8.0",
-    "@react-native-firebase/firestore": "^12.8.0",
-    "@react-native-firebase/storage": "^12.8.0",
+    "@react-native-firebase/app": "^12.9.0",
+    "@react-native-firebase/auth": "^12.9.0",
+    "@react-native-firebase/firestore": "^12.9.0",
+    "@react-native-firebase/storage": "^12.9.0",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
@@ -24,6 +25,7 @@
     "check-if-word": "^1.2.1",
     "expo": "^42.0.3",
     "firebase": "^8.10.0",
+    "outdated": "^0.1.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cards": "^1.1.4",
